# tableshift

./: .gitignore  pyproject.toml  requirements.txt  setup.py
tableshift/core/: data_source.py  features.py
