[build-system]
requires = [
    "setuptools",
    "requests",
    "Cython"
]

build-backend = "setuptools.build_meta"

[project]
name = "tableshift"
version = "0.1"
requires-python = ">=3.8,<=3.10"

dependencies = [
    "multiprocess==0.70.14",
    "numpy==1.23.5",
    "ray==2.2.0",
    "torch~=1.13.0",
    "torchvision~=0.14.0",
    "scikit-learn",
    "pandas==1.3.5",
    "fairlearn==0.8.0",
    "folktables==0.0.12",
    "frozendict==2.3.4",
    "rtdl==0.0.13",
    "xport==3.6.1",
    "tqdm==4.64.1",
    "category_encoders==2.6.0",
    "einops==0.6.0",
    "optuna==3.1.1",
    "datasets==2.11.0",
    "torchinfo~=1.8.0",
    "xgboost==1.7.1",
    "xgboost-ray==0.1.12",
    "lightgbm-ray==0.1.8",
    "ipwidgets",
    "seaborn"
]

[tool.setuptools]
include-package-data = true
packages = [
    "tableshift",
    "tableshift.configs",
    "tableshift.core",
    "tableshift.datasets",
    "tableshift.models",
    "tableshift.notebook_lib",
    "tableshift.tests",
    "tableshift.third_party"
]

[tool.setuptools.package-data]
"*" = ["*.json"]
